<resources>
    <string name="app_name">UniVerse</string>
    <string name="creators">Wallace Lydia , Georgia Petsa , Panagiotis Triantafillidis</string>
    <string name="logImageDesc">logo</string>
    <string name="button">Button</string>
    <string name="background">Background</string>
    <string name="loginButton">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="semester_1">Semester 1</string>
    <string name="semester_2">Semester_2</string>
    <string name="semester_3">semester_3</string>
    <string name="semester2">semester 2</string>
    <string name="semester3">Semester 3</string>
    <string name="semester_4">semester_4</string>
    <string name="semester4">Semester 4</string>
    <string name="semester__4">Semester 4</string>
    <string name="semester_5">Semester 5</string>
    <string name="semester_6">Semester 6</string>
    <string name="semester_7">Semester 7</string>
    <string name="semester_8">Semester 8</string>
    <string name="a_g_1">A.G 1:</string>
    <string name="a_g_2">A.G 2:</string>
    <string name="a_g_3">A.G 3:</string>
    <string name="a_g_4">A.G 4:</string>
    <string name="a_g_5">A.G 5:</string>
    <string name="a_g_6">A.G 6:</string>
    <string name="a_g_7">A.G 7:</string>
    <string name="a_g_8">A.G 8:</string>
    <string name="arrayYear">Select Academic Year </string>
    <string name="arraySemester">Select semester</string>
    <string name="CheckButton">Continue</string>
    <string name="SelectSubjects">Select subjects</string>
    <string name="chooseOfferedSubjects">Choose offered subjects</string>
    <string name="ok">OK</string>
    <string name="Submit">Submit</string>
    <string name="description">Description</string>
    <string name="professor">Professor :</string>
    <string name="ects">ECTS :</string>
    <string name="id">Id :</string>
    <string name="subject_s_id">Subject\'s Id :</string>
    <string name="subjects_name">Subjects Name :</string>
    <string name="subject_s_ects">Subject\'s ECTS :</string>
    <string name="subject_s_prof">Subject\'s Prof:</string>
    <string name="subject_s_description">Subject\'s Description:</string>
    <string name="save">SAVE</string>
    <string name="select_academic_year">Select Academic year:</string>
    <string name="academic_year_management">Academic Year Management</string>
    <string name="add_year">Add Year</string>
    <string name="select_semester">Select Semester:</string>
    <string name="insert_ects">Insert ECTS:</string>
    <string name="enter_ects_here">enter ects here</string>
    <string name="insert_start_date">Insert start date:</string>
    <string name="_202x_xx_xx">202X-XX-XX</string>
    <string name="insert_end_date">Insert end date:</string>
    <string name="_202x_xx_xx__">202X-XX-XX</string>
    <string name="check">CHECK</string>
    <string name="submit">Submit</string>
    <string name="logout">LOGOUT</string>
    <string name="welcome">WELCOME</string>
</resources>